Revert "fix layout issue with contact person"
This reverts commit ffd9326aada60e48cbb5e6fe7b564f0ba98e99f7.

--- a/src/styles/modules/_block-staff-member.styl
+++ b/src/styles/modules/_block-staff-member.styl
@@ -40,9 +40,9 @@
       +above(m)
         box-shadow $module-person-shadow
         // width 65%
-        // width: 'calc(%s + %s)' % (65% rem(20px))
+        width: 'calc(%s + %s)' % (65% rem(20px))
         position: relative
-        // margin: 0 auto rem(55.5px)
+        margin: 0 auto rem(55.5px)
         height: auto
         line-height: 0
         border 10px solid $white
